--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -50,6 +50,9 @@ dependencies:
   freezed_annotation: ^2.1.0
   flutter_bloc: ^8.1.1
   build_runner: ^2.2.1
+  cached_network_image: ^3.2.1
+  shimmer: ^2.0.0
+  intl: ^0.17.0
   # traffic_router:
   #   git:
   #     url: https://github.com/MrOlolo/traffic_router
@@ -77,9 +80,8 @@ flutter:
   uses-material-design: true
 
   # To add assets to your application, add an assets section, like this:
-  # assets:
-  #   - images/a_dot_burr.jpeg
-  #   - images/a_dot_ham.jpeg
+  assets:
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
